--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,17 @@ img {
   display: block;
   max-width: 100%;
 }
+
+button {
+  padding: 10px;
+  margin: 20px;
+  min-height: 45px;
+  text-transform: uppercase;
+}
+/* COLOR SWITCHER */
+.center {
+  min-height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
