--- a/src/css/common.css
+++ b/src/css/common.css
@@ -19,7 +19,6 @@ img {
 
 button {
   padding: 10px;
-  margin: 20px;
   min-height: 45px;
   text-transform: uppercase;
 }
@@ -29,4 +28,35 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 30px;
+}
+
+/* TIMER */
+.wrap {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#datetime-picker {
+  display: inline-flex;
+  width: calc(100% - 90px);
+  height: 40px;
+  margin-right: 22px;
+}
+.timer {
+  margin-top: 30px;
+  display: flex;
+  gap: 30px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+  font-weight: 600;
+  text-align: center;
+}
+.value {
+  font-size: 48px;
+}
+.label {
+  text-transform: uppercase;
 }
