--- a/src/css/common.css
+++ b/src/css/common.css
@@ -60,3 +60,21 @@ button {
 .label {
   text-transform: uppercase;
 }
+
+/* PROMISES */
+.form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  font-size: 16px;
+  font-weight: 700;
+}
+.form label {
+  text-align: center;
+}
+.form input {
+  display: block;
+  margin-top: 5px;
+  width: 130px;
+  font-size: inherit;
+}
